# resume-checker

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  client_secret_479001249606-p7178p8687358s3uj62t0jmu3u79omf1.apps.googleusercontent.com.json  fly.toml  main.cli.py  main.py  prompts.py  pyproject.toml  resume_checker.py  run.sh
.github/workflows/: fly.yml
app/: dependencies.py
app/handlers/: resume_checkerv2.py  resume_handler.py
app/models/: common_models.py  user_model.py
frontend/: .env  .gitignore  README.md  index.html  package-lock.json  package.json  types.ts  vite.config.ts
frontend/public/: splash-screen.css
frontend/src/: App.vue  main.ts
frontend/src/components/: EmptyState.vue  Notice.vue  ResumeHeaderStat.vue  ScanJobModdal.vue  UploadResume.vue  single_resume_section.vue
frontend/src/layouts/: AuthLayout.vue  HomeLayout.vue
frontend/src/router/: clean.ts  index.ts
frontend/src/stores/: auth.ts  resume.ts  theme.ts
frontend/src/views/: Dashboard.vue  Home.vue  LayoutBuilder.vue
resume-landing/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js  webpack-rtl.config.js
resume-landing/public/: index.html
resume-landing/src/: App.vue  main.ts
resume-landing/src/components/: Card.vue  HowItWorks.vue  Loader.vue  OurProject.vue  OurTeam.vue  Pricing.vue  Testimonies.vue  ThingsBetter.vue
resume-landing/src/layout/: Layout.vue
resume-landing/src/router/: clean.ts  index.ts
server/: .env.example  .gitignore  Dockerfile  main.py  navicstein_chinemerem.docx  package.json  prompts.py  pyproject.toml  resume_checker.py
server/app/: dependencies.py
server/app/gpt_analyser/: resume_checkerv2.py
server/app/handlers/: resume_checkerv2.py  resume_handler.py  user_handler.py
server/app/helpers/: resume_generator.py
server/app/models/: common_models.py
server/app/prisma/: schema.prisma
server/app/prompts/: ats_job_prompt.py  job_matcher_prompt.py  resume_analysis_prompt.py  resume_fixer.py
server/app/resume/: resume_route.py  resume_service.py
server/app/resume/resume_schema/: basics_schema.py  default_resume.py  metadata_schema.py  sections_schema.py
server/app/resume/resume_schema/sections/: sections.py
server/app/routes/: resume_route.py  scan_route.py  stripe_route.py  user_route.py
server/app/skill_extractor/: skill_extractor.py
server/app/supabase_client/: client.py
server/app/user/: user_route.py  user_service.py
server/resume_templates/: master_tmpl.docx
server/tests/: test.py  test_analyzer.py  test_resume_score.py
(+551 files in other folders)
