[tool.poetry]
name = "langchain-resume-generator"
version = "0.1.0"
description = ""
authors = ["Navicstein Chinemerem <navicsteinrotciv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.0.352"
bs4 = "^0.0.1"
openai = "^1.6.1"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.5.2"
langchain-experimental = "^0.0.47"
pypdf = "^3.17.3"
python-dotenv = "^1.0.0"
fake-useragent = "^1.4.0"
click = "^8.1.7"
supabase = "^2.3.0"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.6"
validators = "^0.22.0"
unstructured = "^0.11.6"
pdf2image = "^1.16.3"
pdfminer = "^20191125"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

